--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ mybatis.mapper-locations: classpath:com.jbc.seckill.mapper/**/*.xml
 
 
 #redis
-redis.host=192.168.220.128
+redis.host=192.168.43.157
 redis.port=6379
 redis.timeout=3
-redis.password=123456
+#redis.password=123456
 redis.poolMaxTotal=10
 redis.poolMaxIdle=10
 redis.poolMaxWait=3
