--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,20 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ssm
 spring.datasource.username=root
 spring.datasource.password=263310
 #\u6307\u5B9A\u5177\u4F53\u54EA\u4E2A\u6570\u636E\u6E90bean
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource	 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=1000
+spring.datasource.initialSize=100
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=500
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
 #mybatis\u5305\u540D\u522B
 mybatis.type-aliases-package=com.jbc.seckill.domain
 #\u5F00\u542F\u9A7C\u5CF0\u6620\u5C04
