--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,16 @@ redis.poolMaxTotal=100
 redis.poolMaxIdle=50
 redis.poolMaxWait=3
 
+#\u9759\u6001\u9875\u9762\u7F13\u5B58\u8BBE\u7F6E
+#static
+spring.resources.add-mappings=true
+spring.resources.cache-period=3600
+spring.resources.chain.cache=true 
+spring.resources.chain.enabled=true
+spring.resources.chain.gzipped=true
+spring.resources.chain.html-application-cache=true
+spring.resources.static-locations=classpath:/static/
+
 
 
 
